# PrettyYacc

./: CMakeLists.txt
io/: text.txt
main/: main.cpp
main/calc/: calc.h  calc.l  calc.y
